--- a/frontend/src/Advertiser/Components/featured/featured.css
+++ b/frontend/src/Advertiser/Components/featured/featured.css
@@ -5,19 +5,19 @@
     padding: 10px;
 }
 
-.featured .top {
+.top {
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: gray;
 }
 
-.featured .top .title {
+.top .title {
     font-size: 16px;
     font-weight: 500;
 }
 
-.featured .bottom {
+.bottom {
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -26,54 +26,54 @@
     gap: 15px;
 }
 
-.featured .bottom .featuredChart {
+.bottom .featuredChart {
     width: 100px;
     height: 100px;
 }
 
-.featured .bottom .title {
+.bottom .title {
     font-weight: 500;
     color: gray;
 }
 
-.featured .bottom .amount {
+.amount {
     font-size: 30px;
 }
 
-.featured .bottom .desc {
+.desc {
     font-weight: 300;
     font-size: 12px;
     color: gray;
     text-align: center;
 }
 
-.featured .bottom .summary {
+.summary {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.featured .bottom .summary .item {
+.item {
     text-align: center;
 }
 
-.featured .bottom .summary .item .itemTitle {
+.itemTitle {
     font-size: 14px;
     color: gray;
 }
 
-.featured .bottom .summary .item .itemResult {
+.itemResult {
     display: flex;
     align-items: center;
     margin-top: 10px;
     font-size: 14px;
 }
 
-.featured .bottom .summary .item .itemResult.positive {
+.positive {
     color: green;
 }
 
-.featured .bottom .summary .item .itemResult.negative {
+.negative {
     color: red;
 }
