--- a/frontend/src/Advertiser/Components/Sidebar.css
+++ b/frontend/src/Advertiser/Components/Sidebar.css
@@ -60,8 +60,8 @@
     border-left: 3px solid #95e3bb; /* Highlight selected tab */
 }
 
-.sidebar .center ul li .icon {
-    font-size: 25px;
+.icon {
+    font-size: 30px !important;
     color: #ff7b7b;
 }
 
