--- a/frontend/src/Advertiser/Components/Sidebar.css
+++ b/frontend/src/Advertiser/Components/Sidebar.css
@@ -6,14 +6,14 @@
     cursor: default;
 }
 
-.sidebar .top {
+.top {
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.sidebar .top .logo {
+.logo {
     font-size: 20px;
     font-weight: bold;
     color: #ff7b7b;
@@ -71,30 +71,3 @@
     color: #888;
     margin-left: 10px;
 }
-
-/* .sidebar .bottom {
-    display: flex;
-    align-items: center;
-    margin: 10px;
-} */
-
-/* .sidebar .bottom .colorOption {
-    width: 20px;
-    height: 20px;
-    border-radius: 5px;
-    border: 1px solid #95e3bb;
-    cursor: pointer;
-    margin: 5px;
-} */
-
-/* .sidebar .bottom .colorOption:nth-child(1) {
-    background-color: whitesmoke;
-}
-
-.sidebar .bottom .colorOption:nth-child(2) {
-    background-color: #333;
-}
-
-.sidebar .bottom .colorOption:nth-child(3) {
-    background-color: darkblue;
-} */
