--- a/frontend/src/Admin++/pages/home/home.scss
+++ b/frontend/src/Admin++/pages/home/home.scss
@@ -1,8 +1,8 @@
-.home {
+.homeAdmin {
   display: flex;
   font-family: "Poppins", sans-serif;
 
-  .homeContainer {
+  .homeContainerAdmin {
     flex: 6; // used to increase the size of the home container
 
     .widgets,
@@ -16,13 +16,13 @@
       padding: 5px 20px;
     }
 
-    .listContainer {
+    .listContainerAdmin {
       -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
       padding: 20px;
       margin: 20px;
 
-      .listTitle {
+      .listTitleAdmin {
         font-weight: 500;
         color: gray;
         margin-bottom: 15px;
