--- a/frontend/src/TourGuide/Components/navbar/navbar.scss
+++ b/frontend/src/TourGuide/Components/navbar/navbar.scss
@@ -88,7 +88,7 @@
   
   .notification-item {
     margin-bottom: 10px; // Add spacing between notifications
-    background-color: #ff69b4 !important; // Ensure pink background
+    background-color: #b4efed !important; // Ensure pink background
     color: #fff !important; // Ensure white text
     border-radius: 5px; // Rounded corners
     padding: 10px;
