--- a/frontend/src/Admin++/components/sidebar/sidebar.scss
+++ b/frontend/src/Admin++/components/sidebar/sidebar.scss
@@ -1,32 +1,19 @@
-.sidebarAdmin {
+.sidebar {
   flex: 1;
   border-right: 0.5px solid rgb(230, 227, 227);
   min-height: 100vh;
   background-color: white;
-  text-align: left;
-  position: absolute;
-  left: 0; /* Adjusted to ensure correct placement */
-  top: 0;
-  width: 250px;
-  padding-left: 20px; /* Add padding to shift content slightly right */
 
-  .topAdmin {
+  .top {
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
 
-    .logoAdmin {
+    .logoadmin {
       font-size: 20px;
       font-weight: bold;
-      color: #d688a2;
-    }
-
-    .menu-iconAdmin {
-      font-size: 30px;
-      color: #d688a2;
-      cursor: pointer;
-      margin-right: 10px;
+      color: #ff545e;
     }
   }
 
@@ -35,47 +22,43 @@
     border: 0.5px solid rgb(230, 227, 227);
   }
 
-  .centerAdmin {
-    padding-left: 0px;
+  .center {
+    padding-left: 10px;
 
     ul {
       list-style: none;
       margin: 0;
       padding: 0;
 
-      .titleAdmin {
+      .titleadmin {
         font-size: 15px;
         font-weight: 600;
         color: #91c297;
         margin-top: 15px;
-        margin-bottom: 5px;
-        padding-left: 10px; /* Shift titles slightly right */
+        margin-bottom: 5px; /* Shift titles slightly right */
       }
 
       li {
         display: flex;
         align-items: center;
-        padding: 5px 10px; /* Add horizontal padding */
+        padding: 5px;
         cursor: pointer;
 
         &:hover {
-          background-color: #f6d8e576;
-          border-radius: 8px;
+          background-color: #d4ffea;
         }
 
-        .iconAdmin {
+        .iconadmin {
           font-size: 18px;
-          color: #d688a2;
-          transition: all 0.3s ease;
+          color: #ff545e;
         }
 
-        span {
-          font-size: 14px;
-          font-weight: 500;
-          color: #888;
-          margin-left: 10px;
+        span{
+            font-size: 13px;
+            font-weight: 600;
+            color: #888;
+            margin-left: 10px;
         }
-
         .manage-textAdmin {
           display: inline-flex;
           align-items: center;
@@ -109,28 +92,28 @@
     }
   }
 
-  .bottomAdmin {
-    display: flex;
-    align-items: center;
-    margin: 10px;
+  .bottom{
+      display: flex;
+      align-items: center;
+      margin: 10px;
 
-    .colorOptionAdmin {
-      width: 20px;
-      height: 20px;
-      border-radius: 5px;
-      border: 1px solid #d32e65;
-      cursor: pointer;
-      margin: 5px;
+      .colorOption{
+          width: 20px;
+          height: 20px;
+          border-radius: 5px;
+          border: 1px solid #7451f8;
+          cursor: pointer;
+          margin: 5px;
 
-      &:nth-child(1) {
-        background-color: whitesmoke;
+          &:nth-child(1){
+              background-color: whitesmoke;
+          }
+          &:nth-child(2){
+              background-color: #333;
+          }
+          &:nth-child(3){
+              background-color: darkblue;
+          }
       }
-      &:nth-child(2) {
-        background-color: #333;
-      }
-      &:nth-child(3) {
-        background-color: darkblue;
-      }
-    }
   }
 }
