ta2simet kol el css files

--- a/frontend/src/Seller/pages/homeSeller.scss
+++ b/frontend/src/Seller/pages/homeSeller.scss
@@ -1,7 +1,7 @@
-.home {
+.home-seller {
     display: flex;
   
-    .homeContainer {
+    .homeContainer-seller {
       flex: 6;
   
       .widgets,
