--- a/frontend/src/TourGuide/Components/guide.scss
+++ b/frontend/src/TourGuide/Components/guide.scss
@@ -1,7 +1,7 @@
-.listSeller {
+.listGuide {
     display: flex;
     width: 100%;
-    .listContainerSeller {
+    .listContainerGuide {
       flex: 6;
       display: flex;
       flex-direction: column;
