--- a/frontend/src/TourGuide/Components/sidebar/sidebar.scss
+++ b/frontend/src/TourGuide/Components/sidebar/sidebar.scss
@@ -1,104 +1,318 @@
-.sidebar {
-    flex: 1;
+// .sidebar {
+//     flex: 1;
    
-    border-right: 0.5px solid rgb(230, 227, 227);
-    min-height: 100vh;
-    background-color: white;
+//     border-right: 0.5px solid rgb(230, 227, 227);
+//     min-height: 100vh;
+//     background-color: white;
   
-    .top {
+//     .top {
+//       height: 50px;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+  
+//       .logo {
+//         font-size: 20px;
+//         font-weight: bold;
+//         color: #FF3366;
+//       }
+//     }
+  
+//     hr {
+//       height: 0;
+//       border: 0.5px solid rgb(230, 227, 227);
+//     }
+  
+//     .center {
+//       padding-left: 10px;
+  
+//       ul {
+//         list-style: none;
+//         margin: 0;
+//         padding: 0;
+  
+//         .title {
+//           font-size: 10px;
+//           font-weight: bold;
+//           color: #999;
+//           margin-top: 15px;
+//           margin-bottom: 5px;
+//         }
+  
+//         li {
+//           display: flex;
+//           align-items: center;
+//           padding: 5px;
+//           cursor: pointer;
+  
+//           &:hover {
+//             background-color: #d4ffea;
+//           }
+
+  
+//           .icon {
+//             font-size: 18px;
+//             color: #FF3366;
+//           }
+  
+//           span{
+//               font-size: 13px;
+//               font-weight: 600;
+//               color: #888;
+//               margin-left: 10px;
+//           }
+
+//           .sidebar ul li.active {
+//   background-color: #d1e7dd; /* Light green */
+//   color: #0f5132; /* Dark green text */
+//   font-weight: bold;
+// }
+//         }
+//       }
+//     }
+  
+//     .bottom{
+//         display: flex;
+//         align-items: center;
+//         margin: 10px;
+  
+//         .colorOption{
+//             width: 20px;
+//             height: 20px;
+//             border-radius: 5px;
+//             border: 1px solid #7451f8;
+//             cursor: pointer;
+//             margin: 5px;
+  
+//             &:nth-child(1){
+//                 background-color: whitesmoke;
+//             }
+//             &:nth-child(2){
+//                 background-color: #333;
+//             }
+//             &:nth-child(3){
+//                 background-color: darkblue;
+//             }
+//         }
+//     }
+//   }
+
+//   .sidebar ul li.active {
+//     background-color: #d1e7dd; /* Light green */
+//     color: #0f5132; /* Dark green text */
+//     font-weight: bold;
+//   }
+
+// .sidebar-guide {
+//   flex: 1;
+//   border-right: 0.5px solid rgb(230, 227, 227);
+//   min-height: 100vh;
+//   background-color: white;
+
+//   .top-guide {
+//     height: 50px;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+
+//     .logo-guide {
+//       font-size: 20px;
+//       font-weight: bold;
+//       color: #FF3366;
+//     }
+//   }
+
+//   hr {
+//     height: 0;
+//     border: 0.5px solid rgb(230, 227, 227);
+//   }
+
+//   .center-guide {
+//     padding-left: 10px;
+
+//     ul {
+//       list-style: none;
+//       margin: 0;
+//       padding: 0;
+
+//       .title-guide {
+//         font-size: 10px;
+//         font-weight: bold;
+//         color: #999;
+//         margin-top: 15px;
+//         margin-bottom: 5px;
+//       }
+
+//       li {
+//         display: flex;
+//         align-items: center;
+//         padding: 5px;
+//         cursor: pointer;
+
+//         &:hover {
+//           background-color: #d4ffea;
+//         }
+
+//         .icon-guide {
+//           font-size: 18px;
+//           color: #FF3366;
+//         }
+
+//         span {
+//           font-size: 13px;
+//           font-weight: 600;
+//           color: #888;
+//           margin-left: 10px;
+//         }
+
+//         .sidebar-guide ul li.active {
+//           background-color: #d1e7dd; /* Light green */
+//           color: #0f5132; /* Dark green text */
+//           font-weight: bold;
+//         }
+//       }
+//     }
+//   }
+
+//   .bottom-guide {
+//     display: flex;
+//     align-items: center;
+//     margin: 10px;
+
+//     .colorOption-guide {
+//       width: 20px;
+//       height: 20px;
+//       border-radius: 5px;
+//       border: 1px solid #7451f8;
+//       cursor: pointer;
+//       margin: 5px;
+
+//       &:nth-child(1) {
+//         background-color: whitesmoke;
+//       }
+//       &:nth-child(2) {
+//         background-color: #333;
+//       }
+//       &:nth-child(3) {
+//         background-color: darkblue;
+//       }
+//     }
+//   }
+// }
+
+// .sidebar-guide ul li.active {
+//   background-color: #d1e7dd; /* Light green */
+//   color: #0f5132; /* Dark green text */
+//   font-weight: bold;
+// }
+
+.sidebar-guide {
+  flex: 1;
+
+  border-right: 0.5px solid rgb(230, 227, 227);
+  min-height: 100vh;
+  background-color: white;
+  
+
+  .top-guide {
       height: 50px;
       display: flex;
       align-items: center;
       justify-content: center;
-  
-      .logo {
-        font-size: 20px;
-        font-weight: bold;
-        color: #FF3366;
+
+      .logo-guide {
+          font-size: 23px;
+          font-weight: bold;
+          color: #FF3366;
       }
-    }
-  
-    hr {
+  }
+
+  hr {
       height: 0;
       border: 0.5px solid rgb(230, 227, 227);
-    }
-  
-    .center {
+  }
+
+  .center-guide {
       padding-left: 10px;
-  
+      padding-right: 20px;
+
       ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-  
-        .title {
-          font-size: 10px;
-          font-weight: bold;
-          color: #999;
-          margin-top: 15px;
-          margin-bottom: 5px;
-        }
-  
-        li {
-          display: flex;
-          align-items: center;
-          padding: 5px;
+          list-style: none;
+          margin: 0;
+          padding: 0;
+
+          .title-guide {
+              font-size: 20px;
+              font-weight: bold;
+              color: #999;
+              margin-top: 15px;
+              margin-bottom: 5px;
+          }
+
+          li {
+            width: 200px;
+              display: flex;
+              align-items: center;
+              padding: 5px;
+              cursor: pointer;
+
+              &:hover {
+                  background-color: #d4ffea;
+              }
+
+              .icon-guide {
+                  font-size: 18px;
+                  color: #FF3366;
+              }
+
+              span {
+                
+                align-items: center;
+                  font-size: 13px;
+                  font-weight: 600;
+                  color: #888;
+                  margin-left: 10px;
+                  margin-bottom: 10px;
+              }
+
+              .sidebar-guide ul li.active-seller {
+                  background-color: #d1e7dd; /* Light green */
+                  color: #0f5132; /* Dark green text */
+                  font-weight: bold;
+              }
+          }
+      }
+  }
+
+  .bottom-guide {
+      display: flex;
+      align-items: center;
+      margin: 10px;
+
+      .colorOption-guide {
+          width: 20px;
+          height: 20px;
+          border-radius: 5px;
+          border: 1px solid #7451f8;
           cursor: pointer;
-  
-          &:hover {
-            background-color: #d4ffea;
-          }
+          margin: 5px;
 
-  
-          .icon {
-            font-size: 18px;
-            color: #FF3366;
+          &:nth-child(1) {
+              background-color: whitesmoke;
           }
-  
-          span{
-              font-size: 13px;
-              font-weight: 600;
-              color: #888;
-              margin-left: 10px;
+          &:nth-child(2) {
+              background-color: #333;
           }
+          &:nth-child(3) {
+              background-color: darkblue;
+          }
+      }
+  }
+}
 
-          .sidebar ul li.active {
+.sidebar-guide ul li.active-seller {
   background-color: #d1e7dd; /* Light green */
   color: #0f5132; /* Dark green text */
   font-weight: bold;
 }
-        }
-      }
-    }
-  
-    .bottom{
-        display: flex;
-        align-items: center;
-        margin: 10px;
-  
-        .colorOption{
-            width: 20px;
-            height: 20px;
-            border-radius: 5px;
-            border: 1px solid #7451f8;
-            cursor: pointer;
-            margin: 5px;
-  
-            &:nth-child(1){
-                background-color: whitesmoke;
-            }
-            &:nth-child(2){
-                background-color: #333;
-            }
-            &:nth-child(3){
-                background-color: darkblue;
-            }
-        }
-    }
-  }
 
-  .sidebar ul li.active {
-    background-color: #d1e7dd; /* Light green */
-    color: #0f5132; /* Dark green text */
-    font-weight: bold;
-  }
