--- a/frontend/src/Governor/Components/actions.scss
+++ b/frontend/src/Governor/Components/actions.scss
@@ -1,7 +1,7 @@
-.list {
+.listGovernor {
     display: flex;
     width: 100%;
-    .listContainer {
+    .listContainerGovernor {
       flex: 6;
     }
    
