--- a/frontend/src/Admin++/components/featured/featured.scss
+++ b/frontend/src/Admin++/components/featured/featured.scss
@@ -66,11 +66,11 @@
           font-size: 14px;
 
           &.positive {
-            color: green;
+            color: #91c297;
           }
 
           &.negative {
-            color: red;
+            color: #d32e65;
           }
         }
       }
