--- a/frontend/src/Admin++/components/sidebar/sidebar.scss
+++ b/frontend/src/Admin++/components/sidebar/sidebar.scss
@@ -1,8 +1,14 @@
 .sidebarAdmin {
   flex: 1;
   border-right: 0.5px solid rgb(230, 227, 227);
-  min-height: 100vh;
+  min-height: 135vh;
   background-color: white;
+  text-align: left;
+  position: absolute;
+  left: 0; /* Adjusted to ensure correct placement */
+  top: 70;
+  width: 250px;
+  padding-left: 20px; /* Add padding to shift content slightly right */
 
   .topAdmin {
     height: 50px;
@@ -10,10 +16,10 @@
     align-items: center;
     justify-content: center;
 
-    .logoadmin {
+    .logoAdmin {
       font-size: 20px;
       font-weight: bold;
-      color: #ff545e;
+      color: #d32e65;
     }
   }
 
@@ -23,42 +29,46 @@
   }
 
   .centerAdmin {
-    padding-left: 10px;
+    padding-left: 0px;
 
     ul {
       list-style: none;
       margin: 0;
       padding: 0;
 
-      .titleadmin {
+      .titleAdmin {
         font-size: 15px;
         font-weight: 600;
         color: #91c297;
         margin-top: 15px;
-        margin-bottom: 5px; /* Shift titles slightly right */
+        margin-bottom: 5px;
+        padding-left: 10px; /* Shift titles slightly right */
       }
 
       li {
         display: flex;
         align-items: center;
-        padding: 5px;
+        padding: 9px 10px; /* Add horizontal padding */
         cursor: pointer;
 
         &:hover {
-          background-color: #d4ffea;
+          background-color: #f6d8e576;
+          border-radius: 8px;
         }
 
-        .iconadmin {
-          font-size: 18px;
-          color: #ff545e;
+        .iconAdmin {
+          font-size: 22px;
+          color: #e89bb5;
+          transition: all 0.3s ease;
         }
 
         span {
-          font-size: 13px;
-          font-weight: 600;
+          font-size: 14px;
+          font-weight: 500;
           color: #888;
           margin-left: 10px;
         }
+
         .manage-textAdmin {
           display: inline-flex;
           align-items: center;
@@ -101,7 +111,7 @@
       width: 20px;
       height: 20px;
       border-radius: 5px;
-      border: 1px solid #7451f8;
+      border: 1px solid #d32e65;
       cursor: pointer;
       margin: 5px;
 
@@ -112,7 +122,7 @@
         background-color: #333;
       }
       &:nth-child(3) {
-        background-color: rgb(87, 87, 151);
+        background-color: darkblue;
       }
     }
   }
