--- a/frontend/src/Admin++/pages/AddTag/AddTag.scss
+++ b/frontend/src/Admin++/pages/AddTag/AddTag.scss
@@ -1,10 +1,10 @@
 .listTag {
   display: flex;
-  position: relative;
+  width: 100%;
 }
 
 .sidebarAdmin {
-  width: 240px;
+  //width: 100%;
   flex-shrink: 0;
   font-family: "Poppins", sans-serif;
 }
@@ -46,7 +46,7 @@
 }
 .MuiSvgIcon-root {
   font-size: 1.5rem; /* Adjust size if needed */
-  color: #d688a2; /* Set the color for the icon */
+  color: #e89bb5; /* Set the color for the icon */
   margin-right: 10px; /* Add space between icon and text */
 }
 
