--- a/frontend/src/Admin++/components/Advertiser/dataTableAdvertiser/dataTableAdvertiser.scss
+++ b/frontend/src/Admin++/components/Advertiser/dataTableAdvertiser/dataTableAdvertiser.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   position: relative; /* Ensure positioning context */
   // left: 0px; /* Move the datatable 20px to the right */
-  font-family: "Poppins", sans-serif;
+  //font-family: "Poppins", sans-serif;
 
   .datatableTitle {
     width: 100%;
