--- a/frontend/src/Admin++/pages/AddTag/AddTag.scss
+++ b/frontend/src/Admin++/pages/AddTag/AddTag.scss
@@ -46,7 +46,7 @@
 }
 .MuiSvgIcon-root {
   font-size: 1.5rem; /* Adjust size if needed */
-  color: #e89bb5; /* Set the color for the icon */
+  color: #d32e65; /* Set the color for the icon */
   margin-right: 10px; /* Add space between icon and text */
 }
 
