--- a/frontend/src/Admin++/pages/home/home.scss
+++ b/frontend/src/Admin++/pages/home/home.scss
@@ -32,7 +32,7 @@
 
       .listTitleAdminHome {
         font-weight: 500;
-        color: gray;
+        color: #91c297;
         margin-bottom: 15px;
       }
     }
